# zero_2_prod

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile_slim  Readme.md  spec.yaml
configuration/: base.yaml  production.yaml
layout/: basic_request.kdl
migrations/: 20230927040815_create_users_table.sql  20231008055821_seed_user.sql  20231025051828_create_idempotency_table.sql  20231030054137_create_newsletter_issues_table.sql  20231030054834_create_issue_delivery_queue_table.sql
scripts/: init-db.sh  init-redis.sh
src/: admin.rs  configuration.rs  email_client.rs  idempotency.rs  issue_delivery_worker.rs  lib.rs  main.rs  routes.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/admin/: dashboard.rs
src/admin/newsletters/: get.rs  post.rs
src/admin/password/: get.rs  post.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/routes/: newletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
